# nulp-labs

./: .gitignore  README.md  buildAndRun.sh
12/nm/python/: pyproject.toml
12/nm/python/10/: main.py  report.pages
12/nm/python/2/: main.py
12/nm/python/3/: main.py  report.docx
12/nm/python/4/: main.py  report.docx
12/nm/python/5/: main.py  report.pages
12/nm/python/6/: report.docx  report.pages
12/nm/python/7/: main.py  report.docx
12/nm/python/8/: main.py  report.docx  report.pages
12/nm/python/9/: report.pages
12/nm/python/common/: gaussian.py  jakobi.py  lagrange_polynomial.py  least_square.py  least_square_approximation.py  lu.py  lu_decomposition.py  main.py  newton_polynomial.py  seidel.py  simple_iteration.py  simpson.py  (+1 more)
2022/algorithms_and_data_structures/: pyproject.toml
2022/algorithms_and_data_structures/lab10/: main.py  report.docx  report.pages
2022/algorithms_and_data_structures/lab11/: kmp_search.py  main.py  report.pages
2022/algorithms_and_data_structures/lab12/: boyer_moore.py  main.py  report.docx  report.pages
2022/algorithms_and_data_structures/lab8/: main.py  queue.py  report.docx  report.pages
2022/algorithms_and_data_structures/lab9/: main.py  rb_tree.py  report.docx  report.pages
2022/algorithms_and_data_structures/reports/: 1.docx  2.pages  3.docx  3.pages  4.docx  4.pages  5.pages
2022/algorithms_and_data_structures/sorting/: array_generators.py  benchmark.py  bubble_sort.py  config.py  format.py  heap_sort.py  insertion_sort.py  main.py  merge_sort.py  quick_sort.py  selection_sort.py  shell_sort.py  utils.py
(+434 files in other folders)
