[tool.poetry]
name = "algorithms_and_data_structures"
version = "0.1.0"
description = ""
authors = ["Dmytro Soltysiuk <dimasoltysiuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
